# GCN-willdprediction

./: .gitignore  DATASETS.md  GETTING_STARTED.md  INSTALL.md  PROJECT_SUMMARY.md  README.md  VERIFICATION.md  pyproject.toml
configs/: a3tgcn.yaml  gconvlstm.yaml  lstmconv.yaml  tgcn.yaml
examples/: evaluate.py  predict.py  simple_example.py  train.py
src/wildfire_gnn/: __init__.py
src/wildfire_gnn/data/: __init__.py  dataset.py  graph_builder.py
src/wildfire_gnn/models/: __init__.py  a3tgcn.py  base.py  gconvlstm.py  lstmconv.py  tgcn.py
src/wildfire_gnn/utils/: __init__.py  metrics.py  training.py  visualization.py
tests/: test_installation.py
